--- a/app/src/main/res/layout/fragment_create_shoutout.xml
+++ b/app/src/main/res/layout/fragment_create_shoutout.xml
@@ -32,16 +32,16 @@
             app:layout_constraintTop_toTopOf="@id/newShoutoutHeader"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <EditText
-            android:id="@+id/newShoutoutTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
-            android:hint="@string/shoutout_shit_title"
-            android:textSize="26sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newShoutoutHeader" />
+<!--        <EditText-->
+<!--            android:id="@+id/newShoutoutTitle"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:imeOptions="actionDone"-->
+<!--            android:singleLine="true"-->
+<!--            android:hint="@string/shoutout_shit_title"-->
+<!--            android:textSize="26sp"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/newShoutoutHeader" />-->
 
         <EditText
             android:id="@+id/newShoutoutTxt"
@@ -52,7 +52,7 @@
             android:textSize="20sp"
             android:scrollbars="vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newShoutoutTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/newShoutoutHeader" />
 
         <Button
             android:id="@+id/postNewShoutoutBtn"
