--- a/app/src/main/res/layout/switch_layout.xml
+++ b/app/src/main/res/layout/switch_layout.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/switchRelativeLayout"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:clickable="true"
     android:orientation="horizontal" >
 
     <Switch
