--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,7 +30,7 @@
                 android:layout_height="80dp"
                 android:contentDescription="@string/profile_image"
                 android:scaleType="centerCrop"
-                android:src="@drawable/cys_pfp"
+                android:src="@drawable/splash"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
