--- a/app/src/main/res/layout/fragment_event_tab.xml
+++ b/app/src/main/res/layout/fragment_event_tab.xml
@@ -32,7 +32,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                android:focusableInTouchMode="true"
+                android:clickable="true" >
 
                 <HorizontalScrollView
                     android:id="@+id/filterButtons"
@@ -255,7 +257,8 @@
                     android:background="@color/white"
                     android:visibility="gone"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/startDateButton" />
+                    app:layout_constraintTop_toBottomOf="@+id/startDateButton"
+                    android:focusableInTouchMode="true" />
                 <DatePicker
                     android:id="@+id/endDatePicker"
                     android:layout_width="220dp"
@@ -267,7 +270,8 @@
                     android:background="@color/white"
                     android:visibility="gone"
                     app:layout_constraintStart_toStartOf="@id/endDateButton"
-                    app:layout_constraintTop_toBottomOf="@+id/startDateButton" />
+                    app:layout_constraintTop_toBottomOf="@+id/startDateButton"
+                    android:focusableInTouchMode="true" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
