--- a/app/src/main/res/layout/fragment_event_tab.xml
+++ b/app/src/main/res/layout/fragment_event_tab.xml
@@ -9,6 +9,10 @@
         android:background="@color/greyBackground"
         tools:context=".event.EventTabsFragment">
 
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/swiperefresh">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/eventTabList"
             android:layout_width="match_parent"
@@ -20,6 +24,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <ScrollView
             android:layout_width="match_parent"
